# bank

./: .gitignore  base.sql  debug_all.bat  docker-compose.yml  possible_names.txt
app/: .env  Cargo.toml  image_data_as_64.txt  jwt.txt  test.py
app/src/: main.rs
app/src/api/: admin.rs  migrations.rs
app/src/cronjobs/: CronManager.rs  api.rs  cronInterface.rs  test.py
app/src/cronjobs/crons/: cronA.rs  cronB.rs
app/src/routes/: auth.rs  error.rs  routes.rs  user.rs
app/src/types/: user.rs
app/src/user/: roles.rs
app/src/validators/: Validators.rs
app/src/validators/forms/: Base.rs  VBasicInfo.rs  VSecurity.rs
app/src/validators/inputs/: all.rs  email.rs  username.rs
app/static/: index.html
app/static/user/: 1
frontend/: .env  .eslintcache  craco.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/.pem/: cert.pem  key.pem
frontend/.pems/: cert.pem  key.pem
frontend/cert/: Dockerfile
frontend/src/: _root.scss  app.tsx  index.tsx  vite-env.d.ts
frontend/src/@store/: store.tsx  user.slice.ts
frontend/src/@types/: TUser.ts  storeState.ts
frontend/src/fetch/: fetch.js  image.tsx
frontend/src/pages/: migrations.tsx
frontend/src/pages/index/: index.tsx
frontend/src/pages/login/: google.tsx  login.module.scss  login.tsx
frontend/src/pages/profile/: profile.module.scss  profile.tsx
frontend/src/pages/profile/account/: account.module.scss  account.tsx
frontend/src/pages/profile/account/parts/: basic_info.tsx
frontend/src/template/: container.module.scss  container.tsx  header.tsx  loading.module.scss  loading.tsx
frontend/src/template/header/: header.module.scss  header.tsx  sidebar.module.scss  sidebar.tsx
frontend/src/types/: User.ts
migrations/: Cargo.toml
migrations/src/: Cargo.toml  lib.rs  main.rs
migrations/src/database/: database.rs
migrations/src/migrations/: __all__.rs
migrations/src/migrations/files/: _1_a.rs  _2_b.rs  _3_create_user_table.rs  _4_user_table_add_column  _4_user_table_add_column.rs  _5_add_default_admin_user.rs  _6_add_cronjob_table.rs  test copy.py  test.py
migrations/src/oauth/: oauth.rs
