[package]
name = "bank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql ='*'
tokio = { version = "1", features = ["full"] }
warp = "0.3"
migrations = {path = "..\\migrations"}
serde_json = "*"
warp-sessions = "*"
serde = "*"
thiserror = "*"
chrono = "*"
jsonwebtoken = "*"
actix-web = { version = "*"}
derive_builder = "*"
jwt-compact = { version = "*"}
actix-jwt-auth-middleware-derive = "*"
actix-jwt-auth-middleware = "*"
core-crypto = "0.1.1-alpha.2"
actix-files = "*"
actix-cors = "*"