[package]
name = "bank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql ='*'
tokio = { version = "1", features = ["full"] }
warp = "0.3"
migrations = {path = "..\\migrations"}
serde_json = "*"
warp-sessions = "*"
serde = "*"
thiserror = "*"
chrono = "*"
jsonwebtoken = "*"
actix-web = { version = "4", features = ["openssl"] }
derive_builder = "*"
jwt-compact = { version = "*"}
actix-jwt-auth-middleware-derive = "*"
actix-jwt-auth-middleware = "*"
actix-files = "*"
actix-cors = "*"
base64 = "*"
regex = "*"
rust-argon2 = "*"
rand = "*"
automod = "*"
itertools = "*"
openssl = { version = "0.10", features = ["v110"] }



