[package]
name = "migrations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
mysql ='*'
automod = "*"
lazy_static = "*"
serde = { version = "*", features = ["derive"] }
argon2 = "*"
rand = "*"
regex = "*"